# simco

./: CMakeLists.txt  copter.cpp  copter.h  integrator.cpp  integrator.h  linearregression.cpp  linearregression.h  package.xml  qdiff.cpp  simco.cpp  trapint.cpp  trapint.h
