<?xml version="1.0"?>
<package format="2">
  <name>simco</name>
  <version>0.1.1</version>
  <description>simco</description>

  <maintainer email="smirnoviv@rambler.ru">Igor Smirnov</maintainer>
  <license>BSD</license>

  <author email="smirnoviv@rambler.ru">Igor Smirnov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>svo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosbag</depend>
</package>
